# dynamo_lib

./: .gitignore  cheatcode.txt  pyproject.toml  requirements.txt  setup.py  teste.py
core/: _log_wrapper.py  _table_keys.py  dynamo.py  enums.py
cruds/: assistant_crud.py  client_crud.py  company_shift_crud.py  configs_crud.py  control_crud.py  employee_crud.py  faq_crud.py  forms_crud.py  intent_crud.py  logs_crud.py  main_contact_crud.py  queue_crud.py  reengagement_crud.py  sector_crud.py  services_crud.py  users_crud.py
dynamo_lib/core/: _log_wrapper.py  _table_keys.py  dynamo.py  enums.py
dynamo_lib/cruds/: __init__.py  _base_crud.py  assistant_crud.py  checkout.py  client_crud.py  company_shift_crud.py  configs_crud.py  control_crud.py  employee_crud.py  faq_crud.py  forms_crud.py  intent_crud.py  logs_crud.py  main_contact_crud.py  products_crud.py  products_olx_crud.py  queue_crud.py  reengagement_crud.py  sector_crud.py  send_off_crud.py  services_crud.py  tag_crud.py  users_crud.py
dynamo_lib/schemas/: __init__.py  assistant_schema.py  checkout.py  client_schema.py  company_shift_schema.py  configs_schema.py  control_schema.py  employee_schema.py  faq_schema.py  form_schema.py  intent_schema.py  logs_schema.py  main_contact_schema.py  products_olx_schema.py  (+8 more)
schemas/: assistant_schema.py  client_schema.py  company_shift_schema.py  configs_schema.py  control_schema.py  faq_schema.py  form_schema.py  intent_schema.py  logs_schema.py  main_contact_schema.py  queue_schema.py  reengagement_schema.py  sector_schema.py  service_schema.py  user_schema.py
(+8 files in other folders)
