[project]
name = "dynamo-lib"
version = "0.1.0"
description = "Biblioteca para CRUD com dynamoDB"
authors = [
    { name="Pedro Paulo Carvalho Vieira", email="ppaulo030601@gmail.com" }
]
requires-python = ">=3.9"

dependencies = [
    "annotated-types==0.7.0",
    "boto3==1.38.28",
    "botocore==1.38.28",
    "colorama==0.4.6",
    "jmespath==1.0.1",
    "loguru==0.7.3",
    "mypy-boto3-dynamodb==1.38.4",
    "pydantic==2.11.5",
    "pydantic_core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "s3transfer==0.13.0",
    "six==1.17.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "urllib3==2.4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
